--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <meta name="viewport" content="width=device-width" , initial-scale="1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <title>Social Media Lab (Angular)</title>
-  <link rel="stylesheet" type="text/css" href="index.css" href="https://fonts.googleapis.com/css?family=Cedarville+Cursive">
+  <link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css?family=Dosis|Homemade+Apple">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <social-post></social-post>
+  <social-posts></social-posts>
  
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.4/angular.min.js"></script>
+  <script src="https://code.angularjs.org/1.6.5/angular.min.js"></script>
 
   <script src="index.js"></script>
   <script src="components/socialPost/socialPost.js"></script>
