--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <script src="components/socialPost/socialPost.js"></script>
   <script src="components/socialPost/controller.js"></script>
   <script src="components/post/post.js"></script>
+  <script src="components/post/post.html"></script>
   <script src="components/postForm/postForm.js"></script>
+  <script src="components/postForm/postForm.html"></script>
+
  
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
